<resources>
    <string name="app_name">ITAssistant</string>
    <string name="title_issue_detail">Issue Detail</string>
    <string name="jira">Jira</string>
    <string name="stash">Stash</string>
    <string name="jenkins">Jenkins</string>
    <string name="feedback">Post feedback</string>
    <string name="aboutApp">About app</string>
    <string name="settings">Settings</string>
    <string name="fetchingData">Downloading data…</string>
    <string name="errorDownloading">Download error</string>
    <string name="errorDownloadingMsg">Failed to fetch data. Check your settings and try again.</string>
    <string name="ok">OK</string>
    <string name="openDrawer">Open menu</string>
    <string name="closeDrawer">Close menu</string>
    <string name="noData">No data available</string>
    <string name="assignee">Assigned to %1$s</string>
    <string name="issueDetails">Issue details</string>
    <string name="issueType">Type</string>
    <string name="issueStatus">Status</string>
    <string name="issueLabels">Labels</string>
    <string name="issuePriority">Priority</string>
    <string name="people">People</string>
    <string name="issueReporter">Reporter</string>
    <string name="issueAssignee">Assignee</string>
    <string name="issueDescription">Description</string>
    <string name="title_activity_accounts">AccountsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="selectAccountType">Select account type</string>
    <string name="loggingIn">Logging in…</string>
    <string name="configExists">Account already exists</string>
    <string name="validatingForm">Validating…</string>
    <string name="requestTimedOut">Request timed out…</string>
    <string name="addJiraAccount">Add Jira account</string>
    <string name="userCanceledRequest">Request canceled</string>
    <string name="downloadingAvatar">Downloading avatar…</string>
    <string name="couldNotFetchUserData">Failed to retrieve data</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="host">Server address</string>
    <string name="addStashAccount">Add Stash account</string>
    <string name="invalidCredentials">Invalid credentials</string>
    <string name="accountSaved">Account added</string>
    <string name="action_accounts">Accounts</string>
    <string name="addAccount">Add account</string>
    <string name="noAccounts">No accounts</string>
    <string name="noAccountsMsg">You didn\'t configure any accounts yet. Do you want to do it now?</string>
    <string name="yes">Yes</string>
    <string name="quit">Quit</string>
    <string name="selectProject">No issues.\nTry selecting other project from the menu.</string>
    <string name="optionUnavailable">This feature is not yet available</string>
    <string name="editIssue">Edit issue %s</string>
    <string name="createdDate">Created on</string>
    <string name="modifiedDate">Modified on</string>
    <string name="issueDates">Dates</string>
    <string name="issueTimeTracker">Time tracker</string>
    <string name="trackerEstimated">Estimated</string>
    <string name="trackerLeft">Left</string>
    <string name="trackerLogged">Logged</string>
    <string name="notAssigned">Unassigned</string>
    <string name="timeFormat">d \'days\' H \'hours\' m \'minutes\'</string>
    <string name="loadingComments">Loading comments…</string>
    <string name="issueComments">Comments</string>
    <string name="fetchingIssues">Getting issue list…</string>
    <string name="noComments">No comments for selected issue</string>
    <string name="postComment">Post comment for %s</string>
    <string name="postingComment">Posting comment…</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="failedToAddComment">Failed to add issue comment</string>
    <string name="enterCommentBody">Enter comment…</string>
    <string name="commentAdded">Comment added successfully</string>
    <string name="couldNotGetComments">Failed to download comments</string>
    <string name="loadingWorkLogs">Loading work logs…</string>
    <string name="noWorkLogs">No work logged for this issue</string>
    <string name="couldNotGetWorkLogs">Could not get work logs</string>
    <string name="logged">%1$s logged %2$s</string>
    <string name="date">Date</string>
    <string name="worked">Worked</string>
    <string name="remaining">Remaining</string>
    <string name="addWorkLog">Log work for %s</string>
    <string name="workLogAdded">Work logged</string>
    <string name="failedToLogWork">Failed to log work</string>
    <string name="invalidFormat">Invalid field format</string>
    <string name="noIssuesForProject">No issues for selected project</string>
    <string name="title_activity_new_issue">NewIssueActivity</string>
    <string name="editingIssue">Editing %s</string>
    <string name="newIssueForProject">Add issue for %s project</string>
    <string name="projectDetails">Project details</string>
    <string name="failedToFetchDetails">Failed to get project details</string>
    <string name="detailsForProject">Details for %s</string>
    <string name="close">Close</string>
    <string name="fetchingProjectDetails">Fetching data…</string>
    <string name="summary">Summary</string>
    <string name="endDate">Estimated end date</string>
    <string name="failedToPostIssue">Failed to add issue</string>
    <string name="issueAdded">Issue added</string>
    <string name="environment">Environment</string>
    <string name="issueVersion">Version</string>
    <string name="fixedInVersion">Fixed in version</string>
    <string name="issueEpicLink">Epic link</string>
    <string name="issueSprint">Sprint</string>
    <string name="remainingWorkTime">Remaining work time</string>
    <string name="estimatedWorkTime">Estimated work time</string>
    <string name="issueAttachment">Attachment</string>
    <string name="none">Brak</string>
    <string name="fieldRequired">This field is required</string>
    <string name="refresh">Refresh</string>
    <string name="noProject">No project selected</string>
    <string name="yourAccountName">Your account name e.g. My work JIRA</string>
    <string name="issueMoreInfo">More actions…</string>
    <string name="selectTransition">Transition to…</string>
    <string name="statusChanged">Issue status changed</string>
    <string name="statusNotChanged">Failed to change issue status</string>
    <string name="retry">Retry</string>
    <string name="failedToReadAccountData">Failed to get data about %d projects</string>
    <string name="myIssues">Assigned to me</string>
    <string name="selectAssignee">Assign…</string>
    <string name="failedToPostTransition">Failed to transition %d issues</string>
    <string name="changingTransitions">Changing workflow status…</string>
    <string name="changingAssignee">Assigning issues…</string>
    <string name="filter">Filter</string>
    <string name="selectFilter">Filter issues</string>
    <string name="removed">Account removed</string>
    <string name="undo">Undo</string>
    <string name="editJiraAccount">Edit Jira account</string>
    <string name="submit">Submit</string>
    <string name="feedbackInfo">Do you have any suggestions concerning the functionality of this app? Please, post it here so that I can improve it!</string>
    <string name="feedbackYourComments">Enter your feedback here…</string>
    <string name="feedbackThanks">Thanks for your feedback!</string>
    <string name="feedbackResponse">Response for your question</string>
    <string name="rate">Rate</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="selectSort">Sort by</string>
    <string name="tapAgainToExit">Tap Back again to exit</string>
    <string name="split">Split by</string>
    <string name="selectSplit">Split by</string>
    <string name="nothingSelected">Nothing to show.\nSelect issue from the list to see the details.</string>
    <string name="issueUpdated">Issue updated</string>
    <string name="aboutEmail">noiseapps@gmail.com</string>
    <string name="aboutWebsite">http://www.noiseapps.cba.pl</string>
    <string name="copyrightInfo">© Noiseapps %d</string>
    <string name="appVersion">v. %s</string>
    <string name="confirmStop">Save work log</string>
    <string name="progressStarted">Time tracker for %s started</string>
    <string name="confirmStopMsg">Are you sure you want to stop progress and log time to %s?</string>
    <string name="save">Close and save</string>
    <string name="dontSave">Close, but don\'t save</string>
    <string name="progressCleared">Timetracking data cleared</string>
    <string name="workingOnIssue">Working on issue %s</string>
    <string name="emptyTime">0m</string>
    <string name="issueTitle">Title</string>
    <string name="issueKey">Key</string>
    <string name="failedToUpdateIssue">Failed to update issue</string>
    <string name="stashUrl">Address stash</string>
    <string name="editStashAccount">Edit Stash Account</string>
    <string name="failedToDownloadAvatar">Failed to download user avatar</string>
    <string name="saveAnyway">Save with default</string>
    <string name="createBranch">Create branch</string>
    <string name="createPullRequest">Create pull request</string>
    <string name="fork">Fork</string>
    <string name="source">Source</string>
    <string name="commits">Commits</string>
    <string name="branches">Branches</string>
    <string name="pullRequests">Pull requests</string>
    <string name="copy">Copy link</string>
    <string name="linkCopied">Link copied</string>
    <string name="enterBranchName">New branch name</string>
    <string name="branchFrom">Source branch:</string>
    <string name="createBranchFailed">Failed to create branch</string>
    <string name="branchCreated">Branch %s created</string>
    <string name="creatingBranch">Creating branch…</string>
    <string name="enterReviewers">Add reviewers</string>
    <string name="title_activity_stash_branches">StashBranchesActivity</string>
    <string name="branchesForProject">Branches for %s</string>
    <string name="confirmDelete">Delete branch %s?</string>
    <string name="confirmDeleteMsg">Are you sure to delete selected branch? This cannot be undone. Note that you need to have the required permissions to perform this action.</string>
    <string name="failedToFetchCommitList">Failed to fetch commit list</string>
    <string name="commitsForProject">Commits for project %s</string>
    <string name="fetchingBranches">Fetching project branches…</string>
    <string name="noPullRequests">No available pull requests</string>
    <string name="prsForProject">Pull requests for %s</string>
    <string name="prId">#%d</string>
    <string name="prFromTo">from: %1$s to: %2$s</string>
    <string name="enterTitle">Pull request title</string>
    <string name="branchTo">Target branch:</string>
    <string name="noReviewers">You need to select at least one reviewer</string>
    <string name="failedToAddPullRequest">Failed to add Pull Request</string>
    <string name="creatingPullRequest">Creating pull request…</string>
    <string name="pullRequestCreated">Pull request #%d successfully created</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conflicted">Merging is not possible due to conflicts in the codebase</string>
    <string name="merged">Merged</string>
    <string name="merge">Merge</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="updating">Updating…</string>
    <string name="failedToUpdatePr">Failed to update pull request</string>
    <string name="unapprove">Un-approve</string>
    <string name="pullRequestDetails">Details of Pull Request #%d</string>
    <string name="reopen">Reopen</string>
</resources>