<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/actionFilter"
        android:icon="@drawable/ic_filter_list_white_24px"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionSort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionRefresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionDetails"
        android:icon="@drawable/ic_info_outline_24"
        android:title="@string/projectDetails"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>