<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="v.0.1.20"
        android:id="@+id/appVersion"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutWebsite"
        android:autoLink="web"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aboutEmail"
        android:autoLink="email"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/copyrightInfo"
        android:id="@+id/copyright"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>