<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorAccent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view6"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/actionSettings" />

    <TextView
        android:id="@+id/actionSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionAbout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/actionAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionFeedback"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        android:text="@string/aboutApp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/actionFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        android:text="@string/feedback"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</RelativeLayout>